--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="StartupCommunity.org">
   <meta name="author" content="James Gentes">
 
-  <link rel="icon" type="image/png" href="images/favicon.ico">
+  <link rel="icon" type="image/png" href="/public/favicon.png">
 
   <!-- prochtml:remove:dist -->
   <link href="assets/less/styles.less" rel="stylesheet/less" media="all"> 
@@ -38,7 +38,8 @@
     <link rel="stylesheet" href="bower_components/select2/select2.css" />
     <link rel="stylesheet" href="bower_components/jScrollPane/style/jquery.jscrollpane.css" />
     <!-- endbower -->
-    <!-- 
+    <!-- endbuild -->
+    <!--
     <link rel='stylesheet' type='text/css' href='assets/fonts/glyphicons/css/glyphicons.min.css' /> 
     <link rel='stylesheet' type='text/css' href='assets/plugins/icheck/all.css' /> 
     <link rel='stylesheet' type='text/css' href='assets/plugins/form-multiselect/css/multi-select.css' /> 
@@ -56,7 +57,7 @@
     <link rel='stylesheet' type='text/css' href='assets/plugins/fullcalendar/fullcalendar.css' />
     <!-- endbuild -->
 
-    <!-- build:css({.tmp,app}) assets/css/main.css -->
+    <!-- build:css({.tmp,app,.}) assets/css/main.css -->
       <link rel="stylesheet" href="assets/css/main.css">
       <link rel="stylesheet" href="assets/css/styles.css">
     <!-- endbuild -->
@@ -167,12 +168,14 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="bower_components/seiyria-bootstrap-slider/js/bootstrap-slider.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/ng-grid/build/ng-grid.js"></script>
-    <script src="bower_components/google-code-prettify/src/prettify.js"></script>
     <script src="bower_components/enquire/dist/enquire.js"></script>
+    <!-- endbower -->    
+    <script type='text/javascript' src='assets/plugins/progress-skylo/skylo.js'></script>
+    <!-- endbuild -->
     <!--
+    <script src="bower_components/seiyria-bootstrap-slider/js/bootstrap-slider.js"></script>    
     <script src="bower_components/jquery.ui/ui/jquery.ui.core.js"></script>
     <script src="bower_components/jquery.ui/ui/jquery.ui.widget.js"></script>
     <script src="bower_components/jquery.ui/ui/jquery.ui.mouse.js"></script>
@@ -188,11 +191,12 @@
     <script src="bower_components/jqvmap/jqvmap/jquery.vmap.js"></script>
     <script src="bower_components/jqvmap/jqvmap/maps/jquery.vmap.world.js"></script>
     <script src="bower_components/jqvmap/jqvmap/data/jquery.vmap.sampledata.js"></script>
-    <script src="bower_components/angular-toggle-switch/angular-toggle-switch.min.js"></script>
+    <script src="bower_components/angular-toggle-switch/angular-toggle-switch.min.js"></script>    
     <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <script src="bower_components/select2/select2.js"></script>
     <script src="bower_components/angular-ui-select2/src/select2.js"></script>
     <script src="bower_components/iCheck/icheck.min.js"></script>
+    <script src="bower_components/google-code-prettify/src/prettify.js"></script>
     <script src="bower_components/bootbox.js/bootbox.js"></script>
     <script src="bower_components/jquery-autosize/jquery.autosize.js"></script>
     <script src="bower_components/gmaps/gmaps.js"></script>
@@ -205,11 +209,8 @@
     <script src="bower_components/ng-flow/dist/ng-flow.js"></script>
     <script src="bower_components/jScrollPane/script/jquery.mousewheel.js"></script>
     <script src="bower_components/jScrollPane/script/mwheelIntent.js"></script>
-    <script src="bower_components/jScrollPane/script/jquery.jscrollpane.min.js"></script>
+    <script src="bower_components/jScrollPane/script/jquery.jscrollpane.min.js"></script>    
     <script src="bower_components/shufflejs/dist/jquery.shuffle.js"></script>
-    <!-- endbower -->
-    <script type='text/javascript' src='assets/plugins/progress-skylo/skylo.js'></script>
-    <!-- 
     <script type='text/javascript' src='assets/plugins/pines-notify/jquery.pnotify.min.js'></script> 
     <script type='text/javascript' src='assets/plugins/form-datepicker/js/bootstrap-datepicker.js'></script>
     <script type='text/javascript' src='assets/plugins/easypiechart/angular.easypiechart.js'></script> 
@@ -221,7 +222,7 @@
     <script type='text/javascript' src='assets/plugins/bootstro.js/bootstro.min.js'></script> 
     <!-- endbuild -->
 
-      <!-- build:js({.tmp,app}) scripts/scripts.js -->
+      <!-- build:js({.tmp,app,.}) scripts/scripts.js -->
       
       <script src="scripts/shared/Services.js"></script>
       <script src="scripts/shared/Directives.js"></script>
@@ -232,6 +233,8 @@
       <script src="scripts/ui-elements/Panels.js"></script>
       <script src="scripts/form/Components.js"></script>
       <script src="scripts/form/Directives.js"></script>
+      <script src="scripts/app.js"></script>
+      <!-- endbuild -->
       <!-- 
       <script src="scripts/maps/VectorMaps.js"></script>
       <script src="scripts/maps/GoogleMaps.js"></script>
@@ -266,7 +269,7 @@
       <script src="scripts/controllers/ColorPicker.js"></script>
       <script src="scripts/controllers/Dashboard.js"></script>
       -->
-      <script src="scripts/app.js"></script>
+      
       <!-- endbuild -->
 
 </body>
