--- a/app/index.html
+++ b/app/index.html
@@ -198,7 +198,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-54455808-1', 'auto');
+  ga('create', 'UA-54455808-1', 'startupcommunity.org');
 
 </script>
 </body>
