working on header auth token

--- a/app/index.html
+++ b/app/index.html
@@ -164,6 +164,7 @@
     <script src="../bower_components/angulartics/src/angulartics.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-segmentio.js"></script>
     <script src="../bower_components/iCheck/icheck.min.js"></script>
+    <script src="../bower_components/satellizer/satellizer.min.js"></script>
     <!-- endbower -->
     <script type='text/javascript' src='assets/plugins/form-multiselect/js/jquery.multi-select.min.js'></script> 
     <script type='text/javascript' src='assets/plugins/progress-skylo/skylo.js'></script> 
