--- a/app/index.html
+++ b/app/index.html
@@ -159,12 +159,25 @@
     <script src="../bower_components/google-code-prettify/src/prettify.js"></script>
     <script src="../bower_components/select2/select2.js"></script>
     <script src="../bower_components/angular-ui-select2/src/select2.js"></script>
+    <script src="../bower_components/iCheck/icheck.min.js"></script>
     <script src="../bower_components/jquery-waypoints/waypoints.js"></script>
     <script src="../bower_components/SHA-1/sha1.js"></script>
     <script src="../bower_components/angulartics/src/angulartics.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-adobe.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-chartbeat.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-flurry.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-ga-cordova.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-ga.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-gtm.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-kissmetrics.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-mixpanel.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-piwik.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-scroll.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-segmentio.js"></script>
-    <script src="../bower_components/iCheck/icheck.min.js"></script>
-    <script src="../bower_components/satellizer/satellizer.min.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-splunk.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-woopra.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-marketo.js"></script>
+    <script src="../bower_components/satellizer/satellizer.js"></script>
     <!-- endbower -->
     <script type='text/javascript' src='assets/plugins/form-multiselect/js/jquery.multi-select.min.js'></script> 
     <script type='text/javascript' src='assets/plugins/progress-skylo/skylo.js'></script> 
