--- a/app/index.html
+++ b/app/index.html
@@ -236,18 +236,12 @@
         <a id="rightmenu-trigger" tooltip-placement="left" tooltip="Toggle Infobar" ng-click="toggleRightBar()"></a>
 
         <div class="navbar-header pull-left">
-            <li id="search" ng-class="{'keep-open':style_showSearchCollapsed}">
-                <a href=""
-                  ng-class="{blockImportant:style_leftbarCollapsed && !style_showSearchCollapsed}"
-                  ng-click="showSearchBar($event)"
-                ><i class="fa fa-search opacity-control"></i></a>
-                 <form ng-show="!style_leftbarCollapsed || style_showSearchCollapsed"
-                  ng-style="{display: style_showSearchCollapsed? 'block':''}"
+            <li id="search">
+                 <form 
                   ng-click="$event.stopPropagation()"
                   ng-submit="goToSearch()"
                  >
                     <input type="text" ng-model="searchQuery" class="search-query" placeholder="Search..."
-                      ng-style="{width: style_showSearchCollapsed? 'auto':''}"
                     >
                     <button type="submit" ng-click="goToSearch()"><i class="fa fa-search"></i></button>
                 </form>
