beautiful nav and top bar

--- a/app/index.html
+++ b/app/index.html
@@ -270,7 +270,7 @@
                                     active: item.selected,
                                       open: (item.children!==undefined) && item.open,
                                    heading: item.heading }"
-                      ng-include="'templates/nav_renderer.html'"
+                      ng-include="'views/templates/nav_renderer.html'"
                     ></li>
               </ul>
             </div>
