working logout and secure app route

--- a/app/index.html
+++ b/app/index.html
@@ -188,7 +188,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="#">Edit Profile <i class="pull-right fa fa-fw fa-pencil"></i></a></li>
                   <li class="divider"></li>
-                  <li><a href="" class="text-right" ng-click="logOut()">Sign Out</a></li>
+                  <li><a class="text-right" ng-click="logOut()">Sign Out</a></li>
                 </ul>
               </li>
             </ul>
