pagination on mentor page working

--- a/app/index.html
+++ b/app/index.html
@@ -281,12 +281,12 @@
     <div id="page-content" class="clearfix" fit-height>
         <div id="wrap" ng-view="" class="mainview-animation">        
         </div> <!--wrap -->
-        <footer role="contentinfo">
+        <footer role="contentinfo" style="margin-left: 1%; margin-right: 1%;">
           <div class="clearfix">        
             <ul class="list-unstyled list-inline pull-left">
               <li>StartupCommunity.org &copy; 2014</li>
             </ul>        
-            <button class="pull-right btn btn-default btn-xs hidden-print" back-to-top style="padding: 1px 10px;"><i class="fa fa-angle-up"></i></button>        
+            <button class="pull-right btn btn-default btn-xs hidden-print" back-to-top><i class="fa fa-angle-up"></i></button>        
           </div>
         </footer>
     </div> <!-- page-content -->   
