--- a/app/index.html
+++ b/app/index.html
@@ -281,7 +281,7 @@
     <div id="page-content" class="clearfix" fit-height>
         <div id="wrap" ng-view="" class="mainview-animation">        
         </div> <!--wrap -->
-        <footer role="contentinfo" style="margin-left: 1%; margin-right: 1%;">
+        <footer role="contentinfo" style="margin: 1%;">
           <div class="clearfix">        
             <ul class="list-unstyled list-inline pull-left">
               <li>StartupCommunity.org &copy; 2014</li>
