--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,8 @@
     <link rel="stylesheet" href="../bower_components/ng-grid/ng-grid.css" />
     <link rel="stylesheet" href="../bower_components/select2/select2.css" />
     <link rel="stylesheet" href="../bower_components/pnotify/pnotify.core.css" />
-    <link rel="stylesheet" href="../bower_components/jScrollPane/style/jquery.jscrollpane.css" />
+    <link rel="stylesheet" href="../bower_components/pnotify/pnotify.buttons.css" />
+    <link rel="stylesheet" href="../bower_components/pnotify/pnotify.history.css" />
     <!-- endbower -->    
     <link rel='stylesheet' type='text/css' href='assets/plugins/icheck/all.css' /> 
     <link rel='stylesheet' type='text/css' href='assets/plugins/form-multiselect/css/multi-select.css' />     
@@ -312,12 +313,8 @@
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/ng-grid/build/ng-grid.js"></script>
     <script src="../bower_components/jquery-autosize/jquery.autosize.js"></script>
-    <script src="../bower_components/jScrollPane/script/jquery.mousewheel.js"></script>
-    <script src="../bower_components/jScrollPane/script/mwheelIntent.js"></script>
-    <script src="../bower_components/jScrollPane/script/jquery.jscrollpane.min.js"></script>
     <script src="../bower_components/enquire/dist/enquire.js"></script>
     <script src="../bower_components/google-code-prettify/src/prettify.js"></script>
     <script src="../bower_components/select2/select2.js"></script>
@@ -326,9 +323,29 @@
     <script src="../bower_components/jquery-waypoints/waypoints.js"></script>
     <script src="../bower_components/SHA-1/sha1.js"></script>
     <script src="../bower_components/angulartics/src/angulartics.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-adobe.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-chartbeat.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-flurry.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-ga-cordova.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-ga.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-gtm.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-kissmetrics.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-mixpanel.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-piwik.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-scroll.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-segmentio.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-splunk.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-woopra.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-marketo.js"></script>
     <script src="../bower_components/satellizer/satellizer.js"></script>
     <script src="../bower_components/pnotify/pnotify.core.js"></script>
+    <script src="../bower_components/pnotify/pnotify.buttons.js"></script>
+    <script src="../bower_components/pnotify/pnotify.callbacks.js"></script>
+    <script src="../bower_components/pnotify/pnotify.confirm.js"></script>
+    <script src="../bower_components/pnotify/pnotify.desktop.js"></script>
+    <script src="../bower_components/pnotify/pnotify.history.js"></script>
+    <script src="../bower_components/pnotify/pnotify.nonblock.js"></script>
+    <script src="../bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <script type='text/javascript' src='assets/plugins/form-multiselect/js/jquery.multi-select.min.js'></script> 
     <script type='text/javascript' src='assets/plugins/progress-skylo/skylo.js'></script> 
