secured add mentor api

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
     <link rel='stylesheet' type='text/css' href='assets/plugins/icheck/all.css' /> 
     <link rel='stylesheet' type='text/css' href='assets/plugins/form-multiselect/css/multi-select.css' />     
     <link rel='stylesheet' type='text/css' href='assets/plugins/progress-skylo/skylo.css' /> 
+    <link rel='stylesheet' type='text/css' href='assets/plugins/jcrop/css/jquery.Jcrop.min.css' /> 
     <link rel='stylesheet' type='text/css' href='assets/plugins/codeprettifier/prettify.css' />
     <link rel='stylesheet' type='text/css' href='assets/plugins/form-select2/select2.css' />    
     <!-- endbuild -->
@@ -45,7 +46,7 @@
     <!-- build:css({.tmp,app}) assets/css/main.css -->
     <link rel="stylesheet" href="assets/css/proui.css">
     <link rel="stylesheet" href="assets/css/themes.css">    
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <!-- endbuild -->
 
     <!-- prochtml:remove:dist -->
@@ -284,7 +285,7 @@
         <footer role="contentinfo" style="margin: 1%;">
           <div class="clearfix">        
             <ul class="list-unstyled list-inline pull-left">
-              <li>StartupCommunity.org &copy; 2014</li>
+              <li style="color: #bbb;">StartupCommunity.org &copy; 2014</li>
             </ul>        
             <button class="pull-right btn btn-default btn-xs hidden-print" back-to-top><i class="fa fa-angle-up"></i></button>        
           </div>
