--- a/app/index.html
+++ b/app/index.html
@@ -183,7 +183,7 @@
           </li>
           <li class="dropdown" ng-show="isAuthenticated">
           
-            <a href="#" class="dropdown-toggle username"><span class="hidden-xs">{{user.name}}</span><img ng-src="{{user.avatar}}" alt="{{user.name}}" style="margin-right: 11px;"/></a>
+            <a href="#" class="dropdown-toggle username"><span class="hidden-xs">{{user.value.name}}</span><img ng-src="{{user.value.avatar}}" alt="{{user.value.name}}" style="margin-right: 11px;"/></a>
             <ul class="dropdown-menu userinfo arrow">
               <li class="userlinks">
                 <ul class="dropdown-menu">
@@ -323,20 +323,7 @@
     <script src="../bower_components/jquery-waypoints/waypoints.js"></script>
     <script src="../bower_components/SHA-1/sha1.js"></script>
     <script src="../bower_components/angulartics/src/angulartics.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-adobe.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-chartbeat.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-flurry.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-ga-cordova.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-ga.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-gtm.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-kissmetrics.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-mixpanel.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-piwik.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-scroll.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-segmentio.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-splunk.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-woopra.js"></script>
-    <script src="../bower_components/angulartics/src/angulartics-marketo.js"></script>
     <script src="../bower_components/satellizer/satellizer.js"></script>
     <script src="../bower_components/pnotify/pnotify.core.js"></script>
     <script src="../bower_components/pnotify/pnotify.buttons.js"></script>
