--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
     <link rel="stylesheet" href="assets/css/proui.css">
     <link rel="stylesheet" href="assets/css/themes.css">    
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <!-- endbuild -->
 
     <!-- prochtml:remove:dist -->
