--- a/app/index.html
+++ b/app/index.html
@@ -183,7 +183,7 @@
           </li>
           <li class="dropdown" ng-show="isAuthenticated">
           
-            <a href="#" class="dropdown-toggle username"><span class="hidden-xs">{{user.value.name}}</span><img ng-src="{{user.value.avatar}}" alt="{{user.value.name}}" style="margin-right: 11px;"/></a>
+            <a href="#" class="dropdown-toggle username"><span class="hidden-xs">{{user.value.name}}</span><img ng-src="{{user.value.avatar || user.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{user.value.name}}" style="margin-right: 11px;"/></a>
             <ul class="dropdown-menu userinfo arrow">
               <li class="userlinks">
                 <ul class="dropdown-menu">
