--- a/app/index.html
+++ b/app/index.html
@@ -179,11 +179,11 @@
 
         <ul class="nav navbar-nav pull-right toolbar">
           <li class="dropdown" ng-show="!isAuthenticated">
-            <a href="#/login" style="font-size: 14px"><i class="fa fa-sign-in"></i> Log in</a>
+            <a href="/login" style="font-size: 14px"><i class="fa fa-sign-in"></i> Log in</a>
           </li>
           <li class="dropdown" ng-show="isAuthenticated">
           
-            <a href="#" class="dropdown-toggle username"><span class="hidden-xs">{{user.value.name}}</span><img ng-src="{{user.value.avatar || user.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{user.value.name}}" style="margin-right: 11px;"/></a>
+            <a class="dropdown-toggle username"><span class="hidden-xs">{{user.value.name}}</span><img ng-src="{{user.value.avatar || user.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{user.value.name}}" style="margin-right: 11px;"/></a>
             <ul class="dropdown-menu userinfo arrow">
               <li class="userlinks">
                 <ul class="dropdown-menu">
