--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,9 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/ng-grid/ng-grid.css" />
     <link rel="stylesheet" href="../bower_components/select2/select2.css" />
+    <link rel="stylesheet" href="../bower_components/pnotify/pnotify.core.css" />
+    <link rel="stylesheet" href="../bower_components/pnotify/pnotify.buttons.css" />
+    <link rel="stylesheet" href="../bower_components/pnotify/pnotify.history.css" />
     <!-- endbower -->    
     <link rel='stylesheet' type='text/css' href='assets/plugins/icheck/all.css' /> 
     <link rel='stylesheet' type='text/css' href='assets/plugins/form-multiselect/css/multi-select.css' />     
@@ -261,8 +264,28 @@
     <script src="../bower_components/jquery-waypoints/waypoints.js"></script>
     <script src="../bower_components/SHA-1/sha1.js"></script>
     <script src="../bower_components/angulartics/src/angulartics.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-adobe.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-chartbeat.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-flurry.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-ga-cordova.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-ga.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-gtm.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-kissmetrics.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-mixpanel.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-piwik.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-scroll.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-segmentio.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-splunk.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-woopra.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-marketo.js"></script>
     <script src="../bower_components/satellizer/satellizer.js"></script>
+    <script src="../bower_components/pnotify/pnotify.core.js"></script>
+    <script src="../bower_components/pnotify/pnotify.buttons.js"></script>
+    <script src="../bower_components/pnotify/pnotify.callbacks.js"></script>
+    <script src="../bower_components/pnotify/pnotify.confirm.js"></script>
+    <script src="../bower_components/pnotify/pnotify.desktop.js"></script>
+    <script src="../bower_components/pnotify/pnotify.history.js"></script>
+    <script src="../bower_components/pnotify/pnotify.nonblock.js"></script>
     <script src="../bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <script type='text/javascript' src='assets/plugins/form-multiselect/js/jquery.multi-select.min.js'></script> 
@@ -276,7 +299,7 @@
       <script src="scripts/controllers.js"></script>
       <script src="scripts/form/Directives.js"></script>
       <script src="scripts/templates/templates.js"></script>
-      <script src="scripts/templates/overrides.js"></script> 
+      <script src="scripts/templates/overrides.js"></script>
       <script src="scripts/controllers/Navigation.js"></script>
       <script src="scripts/app.js"></script>
       <!-- endbuild -->
