--- a/app/index.html
+++ b/app/index.html
@@ -165,11 +165,11 @@
             <li id="search">
                  <form 
                   ng-click="$event.stopPropagation()"
-                  ng-submit="goToSearch()"
+                  ng-submit="search(searchQuery)"
                  >
                     <input type="text" ng-model="searchQuery" class="search-query" placeholder="Search..."
                     >
-                    <button type="submit" ng-click="goToSearch()"><i class="fa fa-search"></i></button>
+                    <button type="submit" ng-click="search(searchQuery)"><i class="fa fa-search"></i></button>
                 </form>
             </li>
         </div>
