removed extra templates and demo data

--- a/app/index.html
+++ b/app/index.html
@@ -292,10 +292,10 @@
       <script src="scripts/services.js"></script>
       <script src="scripts/directives.js"></script>
       <script src="scripts/controllers.js"></script>
-      <script src="scripts/form/Directives.js"></script>
+      <script src="scripts/form-directives.js"></script>
       <script src="scripts/templates/templates.js"></script>
       <script src="scripts/templates/overrides.js"></script>
-      <script src="scripts/controllers/Navigation.js"></script>
+      <script src="scripts/navigation-controller.js"></script>
       <script src="scripts/app.js"></script>
       <!-- endbuild -->
 
