--- a/app/index.html
+++ b/app/index.html
@@ -268,6 +268,7 @@
     <script src="../bower_components/angulartics/src/angulartics.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-adobe.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-chartbeat.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-cnzz.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-flurry.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-ga-cordova.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-ga.js"></script>
@@ -280,6 +281,7 @@
     <script src="../bower_components/angulartics/src/angulartics-splunk.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-woopra.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-marketo.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-intercom.js"></script>
     <script src="../bower_components/satellizer/satellizer.js"></script>
     <script src="../bower_components/moment/moment.js"></script>
     <!-- endbower -->
