added assign roles ui and cluster schema

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/ng-grid/ng-grid.css" />
     <link rel="stylesheet" href="../bower_components/select2/select2.css" />
+    <link rel="stylesheet" href="../bower_components/angular-toggle-switch/angular-toggle-switch.css" />
     <!-- endbower -->    
     <link rel='stylesheet' type='text/css' href='assets/plugins/icheck/all.css' /> 
     <link rel='stylesheet' type='text/css' href='assets/plugins/form-multiselect/css/multi-select.css' />     
@@ -227,6 +228,7 @@
     <script src="../bower_components/jquery-autosize/jquery.autosize.js"></script>
     <script src="../bower_components/enquire/dist/enquire.js"></script>
     <script src="../bower_components/select2/select2.js"></script>
+    <script src="../bower_components/angular-toggle-switch/angular-toggle-switch.min.js"></script>
     <script src="../bower_components/angular-ui-select2/src/select2.js"></script>
     <script src="../bower_components/iCheck/icheck.min.js"></script>
     <script src="../bower_components/jquery-waypoints/waypoints.js"></script>
