--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
     <link rel="stylesheet" href="assets/css/themes.css">    
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
     <!-- endbuild -->
 
     <!-- prochtml:remove:dist -->
