--- a/app/index.html
+++ b/app/index.html
@@ -147,11 +147,11 @@
           </li>
           <li class="dropdown" ng-show="isAuthenticated">
           
-            <a class="dropdown-toggle username"><span class="hidden-xs">{{global.user.value.name}}</span><img ng-src="{{global.user.value.avatar || global.user.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{global.user.value.name}}" style="margin-right: 11px;"/></a>
+            <a class="dropdown-toggle username" data-toggle='dropdown'><span class="hidden-xs">{{global.user.value.name}}</span><img ng-src="{{global.user.value.avatar || global.user.value.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{global.user.value.name}}" style="margin-right: 11px;"/></a>
             <ul class="dropdown-menu userinfo arrow">
               <li class="userlinks">
                 <ul class="dropdown-menu">
-                  <li><a ng-click="editProfile()">Edit Profile <i class="pull-right fa fa-fw fa-pencil"></i></a></li>
+                  <li><a class="dropdown-toggle" ng-click="editProfile()">Edit Profile <i class="pull-right fa fa-fw fa-pencil"></i></a></li>
                   <li class="divider"></li>
                   <li><a class="text-right" ng-click="logOut()">Sign Out</a></li>
                 </ul>
