--- a/app/index.html
+++ b/app/index.html
@@ -151,9 +151,9 @@
             <ul class="dropdown-menu userinfo arrow">
               <li class="userlinks">
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-toggle" ng-click="editProfile()">Edit Profile <i class="pull-right fa fa-fw fa-pencil"></i></a></li>
+                  <li><a class="dropdown-toggle" ng-click="editProfile()" data-toggle='dropdown'>Edit Profile <i class="pull-right fa fa-fw fa-pencil"></i></a></li>
                   <li class="divider"></li>
-                  <li><a class="text-right" ng-click="logOut()">Sign Out</a></li>
+                  <li><a class="text-right dropdown-toggle" ng-click="logOut()">Sign Out</a></li>
                 </ul>
               </li>
             </ul>
