--- a/app/index.html
+++ b/app/index.html
@@ -242,6 +242,7 @@
     <script src="../bower_components/angulartics/src/angulartics.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-segmentio.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-chartbeat.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-cnzz.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-flurry.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-ga-cordova.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-ga.js"></script>
@@ -254,6 +255,7 @@
     <script src="../bower_components/angulartics/src/angulartics-splunk.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-woopra.js"></script>
     <script src="../bower_components/angulartics/src/angulartics-marketo.js"></script>
+    <script src="../bower_components/angulartics/src/angulartics-intercom.js"></script>
     <script src="../bower_components/satellizer/satellizer.js"></script>
     <script src="../bower_components/moment/moment.js"></script>
     <!-- endbower -->
