added delete confirmation

--- a/app/index.html
+++ b/app/index.html
@@ -223,6 +223,7 @@
     <script src="../bower_components/ng-grid/build/ng-grid.js"></script>
     <script src="../bower_components/jquery-autosize/jquery.autosize.js"></script>
     <script src="../bower_components/angular-toggle-switch/angular-toggle-switch.min.js"></script>
+    <script src="../bower_components/bootbox.js/bootbox.js"></script>
     <script src="../bower_components/enquire/dist/enquire.js"></script>
     <script src="../bower_components/jquery.slimscroll/jquery.slimscroll.min.js"></script>
     <script src="../bower_components/jquery.easing/js/jquery.easing.js"></script>
