--- a/app/index.html
+++ b/app/index.html
@@ -168,6 +168,7 @@
                                       open: (item.children!==undefined) && item.open,
                                    heading: item.heading }"
                       ng-include="'views/templates/nav_renderer.html'"
+                      class="{{item.navClass}}"
                     ></li>
               </ul>
             </div>
