everything good for API and betaTour push

--- a/app/index.html
+++ b/app/index.html
@@ -31,9 +31,9 @@
 
   <!-- build:css assets/css/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="../bower_components/ng-grid/ng-grid.css" />
-  <link rel="stylesheet" href="../bower_components/angular-toggle-switch/angular-toggle-switch.css" />
-  <link rel="stylesheet" href="../bower_components/select2/select2.css" />
+  <link rel="stylesheet" type="text/css" href="../bower_components/ng-grid/ng-grid.css" />
+  <link rel="stylesheet" type="text/css" href="../bower_components/angular-toggle-switch/angular-toggle-switch.css" />
+  <link rel="stylesheet" type="text/css" href="../bower_components/select2/select2.css" />
   <!-- endbower -->    
   <link rel='stylesheet' type='text/css' href='assets/plugins/icheck/all.css' /> 
   <link rel='stylesheet' type='text/css' href='assets/plugins/form-multiselect/css/multi-select.css' />     
@@ -44,14 +44,14 @@
   
 
   <!-- build:css({.tmp,app}) assets/css/main.css -->
-  <link rel="stylesheet" href="assets/css/themes.css">    
-  <link rel="stylesheet" href="assets/css/main.css">     
-  <link rel="stylesheet" href="assets/css/styles.css">       
-  <link rel="stylesheet" href="assets/css/proui.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/themes.css">    
+  <link rel="stylesheet" type="text/css" href="assets/css/main.css">     
+  <link rel="stylesheet" type="text/css" href="assets/css/styles.css">       
+  <link rel="stylesheet" type="text/css" href="assets/css/proui.css">
   <!-- endbuild -->
 
   <!-- prochtml:remove:dist -->
-  <script type="text/javascript">less = {}; less.env = 'development';</script>
+  <!-- <script type="text/javascript">less = {}; less.env = 'development';</script> -->
   <script type="text/javascript" src="assets/plugins/misc/less.js"></script>
   <!-- /prochtml -->
 
