--- a/app/index.html
+++ b/app/index.html
@@ -31,9 +31,9 @@
 
   <!-- build:css assets/css/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" type="text/css" href="../bower_components/ng-grid/ng-grid.css" />
-  <link rel="stylesheet" type="text/css" href="../bower_components/angular-toggle-switch/angular-toggle-switch.css" />
-  <link rel="stylesheet" type="text/css" href="../bower_components/select2/select2.css" />
+  <link rel="stylesheet" href="../bower_components/ng-grid/ng-grid.css" />
+  <link rel="stylesheet" href="../bower_components/angular-toggle-switch/angular-toggle-switch.css" />
+  <link rel="stylesheet" href="../bower_components/select2/select2.css" />
   <!-- endbower -->    
   <link rel='stylesheet' type='text/css' href='assets/plugins/icheck/all.css' /> 
   <link rel='stylesheet' type='text/css' href='assets/plugins/form-multiselect/css/multi-select.css' />     
@@ -213,6 +213,11 @@
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angular-animate/angular-animate.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="../bower_components/jquery.ui/ui/jquery.ui.core.js"></script>
+    <script src="../bower_components/jquery.ui/ui/jquery.ui.widget.js"></script>
+    <script src="../bower_components/jquery.ui/ui/jquery.ui.mouse.js"></script>
+    <script src="../bower_components/jquery.ui/ui/jquery.ui.draggable.js"></script>
+    <script src="../bower_components/jquery.ui/ui/jquery.ui.resizable.js"></script>
     <script src="../bower_components/ng-grid/build/ng-grid.js"></script>
     <script src="../bower_components/jquery-autosize/jquery.autosize.js"></script>
     <script src="../bower_components/angular-toggle-switch/angular-toggle-switch.min.js"></script>
